Fri Jan 29 13:30:11 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc: Construct the StringMatch used for finding
	excerpts in two pieces--user input and post-fuzzy matching. Fixes
	problems with matching searches with punctuation.

	* htlib/StringMatch.cc(IgnoreCase): Fix small memory leak pointed
	out by Gilles.

Thu Jan 28 21:36:03 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/*.html: Changed copyright information to mention the
	ht://Dig group, removing Andrew's name.

	* README, configure.in, Makefile.in: Ditto.

	* configure: Change mention of libg++ -> libstdc++.
	
Thu Jan 28 12:53:40 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Document new remove_default_doc attribute.

	* Makefile.in: Make sure we put the wrapper file in the right place.
	Make sure dictionaries are installed with the correct permissions.

	* installdir/rundig: Use a portable test for testing the endings
	and synonym databases. Also enhanced support for flags (-a, -s,
	-vvv, -c config).

	* htsearch/Display.cc: Fix bug when sorting results would cause a
	coredump.
	
Wed Jan 27 20:00:40 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc, htdig/SGMLEntities.cc, htdig/ExternalParser.cc,
	htcommon/WordList.cc, htcommon/DocumentRef.cc: Speedup by
	converting many config lookups into static variables.

	* htdoc/attrs.html, htdoc/hts_templates.cc, htdoc/cf_byname.html,
	htdoc/cf_byprog.html: Various minor fixes.

	* htsearch/Display.cc: Fix problems with star_patterns attribute.

Wed Jan 27 13:02:39 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/SGMLEntities.cc: Use StringMatch class for matching
	&quot; &amp; &lt; and &gt; as defined by config options. Should
	speed up translation.

	* htdoc/THANKS.html: Minor updates for contributions towards 3.1.0.
	
Tue Jan 26 19:29:08 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
